fix: embed video misplaced
Specificity battle —
* `.rst-content :not(img)` too high
* `('./tacc-theme/bootstrap.css') layer(foundation.tacc)` thus too low
— causes `.embed-responsive` styles to be overriden.

--- a/mkdocs_tacc/tacc_readthedocs/css/tacc-theme/readthedocs-revert.css
+++ b/mkdocs_tacc/tacc_readthedocs/css/tacc-theme/readthedocs-revert.css
@@ -1,4 +1,4 @@
 /* to undo ReadTheDocs styles for page content */
-.rst-content :not(img) {
+:where(.rst-content :not(img)) {
     all: revert;
 }
